#FP-7 modified classes to functions

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nodeworker",
-  "version": "1.0.0",
+  "name": "NodeInfluxWorker",
+  "version": "1.0.1",
   "description": "To monitor and capture the log files using node JS and store it in Influxdb to",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Prabu Dass",
   "license": "ISC",
   "dependencies": {
     "always-tail": "^0.2.0",
